--- a/home/index.html
+++ b/home/index.html
@@ -55,9 +55,9 @@
                             ">
                             </span>文章管理</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="javascript:;">文章类别</a></dd>
-                            <dd><a href="javascript:;">文章列表</a></dd>
-                            <dd><a href="javascript:;">发表文章</a></dd>
+                            <dd><a href="/article/article_cate.html" target="fm">文章类别</a></dd>
+                            <dd><a href="/article/article_list.html" target="fm">文章列表</a></dd>
+                            <dd><a href="/article/article_pub.html" target="fm">发表文章</a></dd>
                         </dl>
                     </li>
                     <li class="layui-nav-item">
